fix signParams